# CefiedGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Interfaces/: IAny.h  ICamera.h  IDrawable.h  IGeometry.h  IMaterial.h  IObject.h  IScene.h  IShaderVariable.h  IViewport.h  TypeSystem.cpp  TypeSystem.h
MainComponents/: IOHandler.cpp  IOHandler.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Window.cpp  Window.h
Scene/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ShaderVariable.cpp  ShaderVariable.h  Transformation.cpp  Transformation.h
Tools/: ConsoleFPS.cpp  ConsoleFPS.h  DDSTextureLoader.cpp  GameTimer.cpp  GameTimer.h  Macros.h
